fix mobile spacing

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -1,10 +1,18 @@
 @media (max-width: 600px) {
 		.page-intro{
+			padding:25px !important;
 			h1{
 				font-size:24px;
 			}
 			h2{
 				font-size:18px;
+			}
+			p{
+				font-size:13px;
+			}
+			.circle-me{
+				width:200px !important;
+				height:200px !important;
 			}
 		}
 }
